-===============================================================================
Change history for translation-utility
================================================================================

DONE:
8/12/08 - look for English strings in project-strings_en.properties, then fallback to project-strings.properties if not found
8/12/08 - move constants to TUConstants
6/25/08 - change URL for translation utility homepage to reflect new website organization
6/25/08 - catch FileNotFoundException when looking for translation-utility.properties on server
6/16/08 - discover project name from jar files named curve-fit.jar or curve-fit_fr.jar
6/16/08 - wrap main in SwingUtility.invokeLater
6/16/08 - remove HTML file generation for Flash, handled dynamically by FlashLauncher
6/16/08 - cleanup JavaSimulation and FlashSimulation
6/16/08 - move common.projects and language properties to their own properties files, since project properties file may lose its formatting
6/16/08 - add HTML file to jar for FlashLauncher, so that "test" feature works
6/16/08 - add support for Flash sims (test isn't working yet, missing HTML file)
6/16/08 - add factory for creating proper type of Simulation
6/16/08 - rename UpdateManager
6/16/08 - refactor to create Simulation type hierarchy
6/16/08 - delete dead code for using Google Translate to provide an automatic translation
6/13/08 - PropertiesFlashAdapter, for converting to/from Properties and format required by Flash sims (XML)
6/11/08 - check for updates and alert the user [537]
********* version 0.02.00 (21098)
4/29/08 - delete test JAR on VM exit [98]
4/29/08 - properties file header: add version number, shorten filename [256]
1/7/08 - get preferred fonts from PhetCommonResources.getPreferredFonts
********* version 0.01.00 (19216)
1/2/08 - switch new language codes (he,yi,id) to old language codes (iw,ji,in) because java.util.Locale does this mapping
********* version 0.00.11 (19013)