@@ -3,6 +3,7 @@ Change history for translation-utility
 ================================================================================
 
 DONE:
+8/12/08 - exclude the source language (English) from the choices for destination language
 8/12/08 - look for English strings in project-strings_en.properties, then fallback to project-strings.properties if not found
 8/12/08 - move constants to TUConstants
 6/25/08 - change URL for translation utility homepage to reflect new website organization
